--- a/HydeeInterface/Web.config
+++ b/HydeeInterface/Web.config
@@ -56,7 +56,7 @@
     <directoryBrowse enabled="true"/>
     <defaultDocument>
       <files>
-        <add value="WmsInterface.asmx"/>
+        <add value="HydeeInterface.asmx"/>
       </files>
     </defaultDocument>
   </system.webServer>
